# Conpyrus

./: CMakeLists.txt  CMakePresets.json  README.md  build.cmd  file.conpy
src/: conpy.cpp  conpy.hpp  conpyrus.cpp  conpyrus.h  conpyrus.hpp  main.c  main.cpp
